# cobot_ws

./: .gitignore  Next_time.md  README.md  Second_plan.md
calib/: T_base_cam.json  calib_points.json
src/: fairino_description  fairino_hardware_v3_9_6
src/fr5_bringup/: CMakeLists.txt  package.xml
src/fr5_bringup/config/: fr5.srdf  gripper.yaml  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tcp_offset.yaml  workspace.yaml
src/fr5_bringup/launch/: a1_bringup.launch.py
src/fr5_bringup/scripts/: a1_move_and_read.py  a2_gripper.py  a2_tcp_calibrate.py  a3_measure_workspace.py  a3_planning_scene.py  a3_tcp_watchdog.py  b1_capture_points.py  b2_fit_transform.py  b3_hover.py  b3_pick_point.py
src/fr5_bringup/urdf/: fr5.urdf.xacro  fr5_ros2_control.xacro
